# qsc

./: CMakeLists.txt  README.md  external_qpp.cmake  external_systemc.cmake
qsc/: defines.h  qcnot.h  qflip.h  qmeasure.h  qsystemc.h
test/: CMakeLists.txt  minimal.cpp  qcnot.cpp  qflip.cpp
